cluster/homelab/apps/media/shelfmark/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shelfmark
  labels:
    app.kubernetes.io/instance: shelfmark
    app.kubernetes.io/name: shelfmark
spec:
  replicas: 1 # Uses SqLite, so only one
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/instance: shelfmark
      app.kubernetes.io/name: shelfmark
  template:
    metadata:
      annotations:
        backup.velero.io/backup-volumes: data
      labels:
        app.kubernetes.io/instance: shelfmark
        app.kubernetes.io/name: shelfmark
    spec:
      restartPolicy: Always
      containers:
        - name: shelfmark
          image: ghcr.io/calibrain/shelfmark:v1.4.0
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 128m
              memory: 128Mi
            limits:
              cpu: 1
              memory: 1Gi
          ports:
            - name: web
              containerPort: 8084
          securityContext:
            capabilities:
              drop:
                - "ALL"
              add:
                - CHOWN
                - SETUID
                - SETGID
          livenessProbe:
            failureThreshold: 5
            initialDelaySeconds: 30
            timeoutSeconds: 2
            tcpSocket:
              port: 8084
          startupProbe:
            failureThreshold: 10
            timeoutSeconds: 2
            tcpSocket:
              port: 8084
          volumeMounts:
            - name: books-data-nfs
              mountPath: /books # This is where the books will be downloaded and ingested by your book management application
            - name: config
              mountPath: /config
            - name: downloads-data
              mountPath: /downloads
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: shelfmark-config
        - name: downloads-data
          nfs:
            path: "/volume1/k3s/media/downloads"
            server: "192.168.1.39"
        - name: books-data-nfs
          nfs:
            path: "/volume1/k3s/media/books"
            server: "192.168.1.39"
